<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:enabled="false"
    tools:context=".presentation.AccountActivity">



    <Button
        android:id="@+id/button_back_account_management"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="Back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView

        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_back_account_management"
        app:layout_constraintVertical_bias="0.098">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="50dp">


            <TextView
                android:id="@+id/heading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="50dp"
                android:text="Account Information"
                android:textColor="@color/purple"
                android:textSize="40dp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/username_field"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="User Name"
                    android:textSize="30dp"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/enter_username_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:ems="10"
                        android:hint="UserName"
                        android:inputType="text"
                        android:textColor="@color/grey"
                        android:textSize="30dp" />

                    <TextView
                        android:id="@+id/userName_message"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="Pease enter more than 3 characters."
                        android:textSize="15dp"
                        android:textStyle="italic" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/address_field"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:text="Postal Address"
                    android:textSize="30dp"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/enter_address_field"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="Please enter you address"
                    android:inputType="textPostalAddress"
                    android:textColor="@color/grey"
                    android:textSize="30dp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/password_field"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint=" Enter password"
                    android:textSize="30dp"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/enter_password_field"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="samplePassword"
                        android:inputType="textPassword"
                        android:textColor="@color/grey"
                        android:textSize="30dp" />

                    <TextView
                        android:id="@+id/password_message"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:text="Please enter more that 4 characters."
                        android:textSize="15dp"
                        android:textStyle="italic" />

                </LinearLayout>


            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="20dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/userType"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:hint=" Enter userType"
                    android:textSize="30dp"
                    android:textStyle="italic" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:orientation="vertical">
                    <RadioGroup
                        android:id="@+id/radio_userType"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/radio_student"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Student"
                            android:checked="false" />

                        <RadioButton
                            android:id="@+id/radio_professor"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Professor"
                            android:checked="false" />

                    </RadioGroup>
                </LinearLayout>


            </LinearLayout>

            <Button
                android:id="@+id/account_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="50dp"
                android:text="create"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.952"
                app:layout_constraintStart_toStartOf="@+id/scrollView2"
                app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

        </LinearLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>

