...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:background="@color/light_purple">

        <!-- Home button layout -->
        <ImageView
            android:id="@+id/homeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/home" />

...
            android:layout_marginVertical="3dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/books" />

        <!-- Profile button layout -->
        <ImageView
            android:id="@+id/profileButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="3dp"
            android:layout_weight="1"
            app:srcCompat="@drawable/profile_picture" />

...
