...
                    android:layout_weight="50"
                    android:textColor="@color/black"
                    android:text="Favourite Books"
                    android:textSize="40dp" />

                <ImageView
                    android:id="@+id/viewFavouriteBooks"
                    android:layout_width="100dp"
                    android:layout_height="80dp"
                    android:layout_margin="0dp"
                    app:srcCompat="@drawable/right" />
            </LinearLayout>

...
